# LovyanHAL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.json  library.properties  license.txt
examples/HowToUse/: HowToUse.ino
examples/UseWithHost/UseWithHost_Serial/: UseWithHost_Serial.ino
examples/UseWithHost/UseWithHost_TCP/: UseWithHost_TCP.ino
examples_for_PC/CMake_sample/: CMakeLists.txt  user_code.cpp
src/: LHAL_terminal.hpp  LovyanHAL.hpp
src/lhal/: IBus.hpp  LHAL_Base.hpp  LovyanHAL_Base.cpp  LovyanHAL_Base.hpp  common.hpp  gitTagVersion.h  init.hpp  init_v0.hpp  platform_check.hpp
src/lhal/platforms_pc/: LovyanHAL_PC.cpp  LovyanHAL_PC.hpp  common.hpp
src/lhal/platforms_pc/windows/: LHAL.cpp  LHAL.hpp  init.hpp
src/lhal/use_with_host/: common.hpp  for_host.cpp  for_host.hpp  for_mcu.cpp  for_mcu.hpp
src/lhal/v0/: IBus.hpp  LovyanHAL_Base.hpp  common.hpp  common.inl  init.cpp  init.hpp  platform_check.hpp
src/lhal/v0/linkmode/: for_mcu.hpp  for_mcu.inl
src/lhal/v0/platforms_host/: LovyanHAL_HOST.hpp  common.hpp  host_impl.inl
src/lhal/v0/platforms_host/windows/: LHAL.hpp  code.inl  env.hpp
